docs/0.18/_sources/api/gammapy.modeling.models.SpatialModel.rst.txt
SpatialModel
============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpatialModel.covariance
      ~SpatialModel.default_parameters
      ~SpatialModel.is_energy_dependent
      ~SpatialModel.parameters
      ~SpatialModel.phi_0
      ~SpatialModel.position
      ~SpatialModel.position_error
      ~SpatialModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpatialModel.__call__
      ~SpatialModel.copy
      ~SpatialModel.create
      ~SpatialModel.evaluate_geom
      ~SpatialModel.from_dict
      ~SpatialModel.from_parameters
      ~SpatialModel.integrate_geom
      ~SpatialModel.plot
      ~SpatialModel.plot_error
      ~SpatialModel.plot_grid
      ~SpatialModel.plot_interative
      ~SpatialModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: plot_grid
   .. automethod:: plot_interative
   .. automethod:: to_dict
